<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>CustomRecipes</groupId>
	<artifactId>CustomRecipes</artifactId>
	<version>2.0.5.6</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<filtering>true</filtering>
				<directory>resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<failOnError>false</failOnError> <!-- don’t fail build if
					Javadocs missing -->
					<quiet>true</quiet>              <!-- suppress warnings -->
					<excludePackageNames>
						me.mehboss.recipe.*
					</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<minimizeJar>true</minimizeJar>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>com/cryptomorin/xseries/XBiome*</exclude>
								<exclude>com/cryptomorin/xseries/XBlock*</exclude>
								<exclude>com/cryptomorin/xseries/XEntity*</exclude>
								<exclude>com/cryptomorin/xseries/XEntityType*</exclude>
								<exclude>com/cryptomorin/xseries/XItemStack*</exclude>
								<exclude>com/cryptomorin/xseries/XWorldBorder*</exclude>
								<exclude>com/cryptomorin/xseries/XTag*</exclude>
								<exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
								<exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
								<exclude>
									com/cryptomorin/xseries/SkullCacheListener*</exclude>
							</excludes>
						</filter>
					</filters>
					<relocations>
						<relocation>
							<pattern>de.tr7zw.changeme.nbtapi</pattern>
							<shadedPattern>me.mehboss.utils.nbtapi</shadedPattern>
						</relocation>
					</relocations>
					<finalName>${project.artifactId}-${project.version}</finalName>
					<shadedArtifactAttached>false</shadedArtifactAttached>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>
				https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>CodeMC</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
		</repository>
		<repository>
			<id>EcoEnchants</id>
			<url>https://repo.auxilor.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>jitpack-repo</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>nexus</id>
			<name>Lumine Releases</name>
			<url>https://mvn.lumine.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>oraxen</id>
			<name>Oraxen Repository</name>
			<url>https://repo.oraxen.com/releases</url>
		</repository>
		<repository>
			<id>nexomc</id>
			<url>https://repo.nexomc.com/releases</url>
		</repository>
		<repository>
			<id>phoenix</id>
			<url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
		</repository>
		<repository>
			<id>minecraft-repo</id>
			<url>https://libraries.minecraft.net/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.cryptomorin</groupId>
			<artifactId>XSeries</artifactId>
			<version>13.3.3</version>
		</dependency>
		<dependency>
			<groupId>com.willfp</groupId>
			<artifactId>EcoEnchants</artifactId>
			<version>12.19.0</version>
		</dependency>
		<dependency>
			<groupId>io.github.bananapuncher714</groupId>
			<artifactId>nbteditor</artifactId>
			<version>7.20.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.LoneDev6</groupId>
			<artifactId>api-itemsadder</artifactId>
			<version>3.6.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>Mythic-Dist</artifactId>
			<version>5.7.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>MythicLib-dist</artifactId>
			<version>1.6.2-SNAPSHOT</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>net.Indyuce</groupId>
			<artifactId>MMOItems-API</artifactId>
			<version>6.9.5-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>de.tr7zw</groupId>
			<artifactId>item-nbt-api</artifactId>
			<version>2.15.3</version>
		</dependency>
		<dependency>
			<groupId>io.th0rgal</groupId>
			<artifactId>oraxen</artifactId>
			<version>1.189.0</version>
			<exclusions>
				<exclusion>
					<groupId>me.gabytm.util</groupId>
					<artifactId>actions-spigot</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jetbrains</groupId>
					<artifactId>annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.ticxo</groupId>
					<artifactId>PlayerAnimator</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.github.stefvanschie.inventoryframework</groupId>
					<artifactId>IF</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.th0rgal</groupId>
					<artifactId>protectionlib</artifactId>
				</exclusion>
				<exclusion>
					<groupId>dev.triumphteam</groupId>
					<artifactId>triumph-gui</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bstats</groupId>
					<artifactId>bstats-bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.jeff-media</groupId>
					<artifactId>custom-block-data</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.jeff-media</groupId>
					<artifactId>persistent-data-serializer</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.jeff_media</groupId>
					<artifactId>MorePersistentDataTypes</artifactId>
				</exclusion>
				<exclusion>
					<groupId>gs.mclo</groupId>
					<artifactId>java</artifactId>
				</exclusion>
			</exclusions>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.nexomc</groupId>
			<artifactId>nexo</artifactId>
			<version>1.3.0</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>*</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.mojang</groupId>
			<artifactId>authlib</artifactId>
			<version>6.0.54</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.eclipsesource.minimal-json</groupId>
			<artifactId>minimal-json</artifactId>
			<version>0.9.5</version>
		</dependency>
		<dependency>
			<groupId>com.github.Valorless</groupId>
			<artifactId>HavenBags</artifactId>
			<version>156279014a</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>